# rover

./: .dockerignore  .gitignore  .gitmodules  .luarc.json  AGENTS.md  CATALOG.md  CHANGELOG.md  CHANNEL_OPTIMIZATION_SIMPLE.md  CHANNEL_OVERHEAD_EXPLAINED.md  Cargo.toml  Cross.toml  DIAGNOSTICS_EXAMPLES.md  FLUME_AND_BATCHING_DEEP_DIVE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_HTTP2_CONFIG.md  LAZY_CONTEXT_AND_CHANNEL_DEEP_DIVE.md  LAZY_CONTEXT_REALITY_CHECK.md  LICENSE  LSP_TESTING_GUIDE.md  OPTIMIZATION_IMPLEMENTATION_GUIDE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_PROFILE_RESULTS.md  PERFORMANCE_WORKFLOW.md  PLAN.md  PR_DESCRIPTION.md  README.md  REPORT.md  ROADMAP.md  WS_DOCS.md  WS_IMPLEMENTATION_PLAN.md  bench.sh  benchmark_opt.lua  benchmark_optimized_final.txt  benchmark_results_optimized.txt  benchmark_wrk.lua  build.zig  build.zig.zon  chat.lua  chat_client.lua  (+19 more)
cli/: Cargo.toml
cli/src/: check.rs  main.rs
crates/rover-cli/: Cargo.toml
crates/rover-cli/src/: main.rs
crates/rover-render/: Cargo.toml
crates/rover-render/src/: icons.rs  lib.rs  theme.rs
crates/rover-runtime/: Cargo.toml
crates/rover-runtime/src/: android_vulkan.rs  lib.rs
rover-android/: Cargo.toml
rover-android/src/: jni_export.rs  lib.rs  renderer.rs  runtime.rs
rover-android/template/: AndroidManifest.xml  MainActivity.kt  RoverRuntime.kt  app.build.gradle.kts  settings.gradle.kts
rover-cli/: Cargo.toml  build.rs
rover-cli/build_script/: archive.rs  embedded.rs  mod.rs  web_wasm.rs
rover-cli/build_script/assets/: runtime_index.html  runtime_loader.js
rover-cli/src/: build.rs  check.rs  cli.rs  db.rs  fmt.rs  main.rs  repl.rs  run.rs  scripts.rs
rover-cli/tests/: https_cli.rs  perf_http_echo.rs
rover-core/: Cargo.toml  rover.lua
rover-core/src/: auto_table.rs  cookie.rs  debug.lua  env.rs  error_reporter.rs  event_loop.rs  guard.lua  guard.rs  html.rs  http.rs  inspect.rs  io.rs  lib.rs  middleware.rs  permissions.rs  security.rs  server.rs  session.rs  surface.rs  template.rs  ws_client.rs
rover-core/tests/: io_path_traversal_test.rs  permissions_example_validation.rs  security_bypass_attempts.rs  security_e2e.rs
rover-db/: Cargo.toml
rover-db/src/: analyzer.lua  connection.rs  db.lua  executor.rs  file_analyzer.rs  guard.lua  intent_handler.rs  lib.rs  lib.rs.bak  migration.rs  migration_dsl.lua  schema.rs  schema_analyzer.rs  schema_dsl.lua
rover-db/tests/: db_test.lua  integration_test.rs  migration_test.rs
rover-db/tests/migrations/: 001_create_users.lua  002_rollback_test.lua  003_posts.lua  004_comments.lua
rover-ios/: Cargo.toml
rover-ios/src/: abi_export.rs  lib.rs  renderer.rs  runtime.rs
rover-ios/template/: RoverIosHost.swift  project.pbxproj
rover-lsp/: Cargo.toml
rover-lsp/src/: lib.rs
rover-runtime/: Cargo.toml
rover-runtime/src/: main.rs
rover-server/: Cargo.toml
rover-server/src/: buffer_pool.rs  compression.rs  connection.rs  direct_json_parser.rs  event_loop.rs  fast_router.rs  h2.rs  http_server.rs  http_task.rs  lib.rs  lifecycle.rs  load_shedder.rs  loop_metrics.rs  multipart.rs  rate_limiter.rs  response.rs  session.rs  static_file.rs  store.rs  table_pool.rs  tls_reload.rs  to_json.rs  ws_frame.rs  ws_handshake.rs  ws_lua.rs  ws_manager.rs
rover-server/tests/: compression_conditional_integration.rs  compression_headers_integration.rs  encoding_negotiation_integration.rs  hardened_parsing.rs  health_probe_states_integration.rs  hot_reload_integration.rs  https_and_proxy_tests.rs  idempotency_integration_test.rs  lifecycle_integration.rs  multi_instance_consistency_integration.rs  multipart_static_integration.rs  openapi_and_versioned_endpoints_integration.rs  overload_and_drain_integration.rs  reload_shutdown_inflight_integration.rs  route_precedence_integration.rs  session_integration_test.rs  startup_failure_matrix.rs  store_integration_test.rs  stream_cancellation_integration.rs  streaming_sse_non_compression.rs  telemetry_and_outage_readiness_integration.rs  websocket_integration_test.rs  ws_handshake_integration.rs
rover-types/: Cargo.toml
rover-types/src/: audit.rs  denied.rs  guard.rs  lib.rs  permissions.rs  sanitize.rs  task.rs
rover-ui/: ARCHITECTURE.md  Cargo.toml
rover-ui/src/: app.rs  coroutine.rs  job_pool.rs  jobs.rs  lib.rs  platform.rs
rover-ui/src/events/: mod.rs  queue.rs
rover-ui/src/layout/: engine.rs  mod.rs
rover-ui/src/lua/: derived.rs  effect.rs  helpers.rs  metamethods.rs  mod.rs  modifier.lua  node.rs  signal.rs  tui_module.lua  ui.rs  utils.rs
rover-ui/src/node/: arena.rs  binding.rs  commands.rs  mod.rs  types.rs
rover-ui/src/platform/: tui.rs
rover-ui/src/renderer/: mod.rs  test_utils.rs  traits.rs  tui.rs
rover-ui/src/scheduler/: mod.rs  timer.rs
rover-ui/src/signal/: arena.rs  derived.rs  effect.rs  graph.rs  mod.rs  runtime.rs  value.rs
rover-ui/src/ui/: mod.rs  (+7 more)
rover-ui/tests/: counter.rs  lua_backend.rs  style_mod.rs
rover-web/: Cargo.toml
rover-web-wasm/: Cargo.toml  build.rs
rover-web-wasm/.cargo/: config.toml
rover-web-wasm/scripts/: emcc-linker.sh
rover-web-wasm/src/: lib.rs
rover-web/src/: lib.rs  platform.rs  renderer.rs
rover_core/: Cargo.toml
rover_core/examples/: app_socket.lua  clean_validation_errors.lua  complex_server.lua  comprehensive_test.lua  expected.lua  html.lua  http_test.lua  rover.lua  server.lua  test_all_features.lua  test_context.lua  test_edge_cases.lua  test_errors.lua  test_guard.lua  test_headers.lua  test_log_levels.lua  test_no_pcall.lua  test_simple.lua  test_validation_errors.lua  websocket.lua  websocket_client.lua
rover_core/src/: app_type.rs  auto_table.rs  component.rs  guard.lua  guard.rs  html.rs  html_diff.rs  io.rs  lib.rs  rover.client.js  server.rs
rover_server/: Cargo.toml
rover_server/benches/: json_serialization.rs  request_handling.rs
rover_server/src/: event_loop.rs  fast_router.rs  http_task.rs  lib.rs  request_context.rs  response.rs  status_code.rs  to_json.rs  websocket.rs
src/gears/: Cargo.toml  README.md  build.rs  setup
src/rover-cli/: Cargo.toml
(+687 files in other folders)
