[workspace]
resolver = "3"
members = ["rover-cli" , "rover-core", "rover-server", "rover-lsp", "rover-parser", "rover-types", "rover-db", "rover-ui", "rover-runtime", "rover-bundler", "rover-tui", "rover-auth"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
debug = true  

# Profiling: release speed + debug symbols
[profile.profiling]
inherits = "release"
debug = true  # Keep debug symbols for samply
