[package]
name = "rover-android"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.100"
jni = "0.21"
rover-native = { path = "../rover-native" }
rover_ui = { path = "../rover-ui" }

[target.'cfg(target_os = "android")'.dependencies]
mlua = { version = "0.11.5", default-features = false, features = ["anyhow", "vendored", "lua54"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
mlua = { version = "0.11.5", default-features = false, features = ["anyhow", "vendored", "luajit52"] }
