[package]
name = "rover_cli"
version = "0.0.1-alpha"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
rover_core = {path = "../rover-core"}
rover_ui = {path = "../rover-ui"}
rover_tui = {path = "../rover-tui"}
rover-lsp = {path = "../rover-lsp"}
rover-parser = {path = "../rover-parser"}
rover_db = {path = "../rover-db"}
rover_bundler = {path = "../rover-bundler"}
rover-web = {path = "../rover-web"}
rover-macos = {path = "../rover-macos"}
rover-ios = {path = "../rover-ios"}
rover-android = {path = "../rover-android"}
colored = "2.2"
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
mlua = { version = "0.11.5", features = ["anyhow", "vendored", "luajit52"] }
flate2 = "1.1"
tar = "0.4"
rustyline = "15"

[build-dependencies]
flate2 = "1.1"
tar = "0.4"

[dev-dependencies]
hpack = "0.3"
rcgen = "0.13"

[[bin]]
name = "rover"
path = "src/main.rs"
