[package]
name = "rover_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
mlua = { version="0.11.5", features = ["anyhow", "vendored", "luajit", "send", "serialize", "async"] }
rover_server = {path = "../rover-server"}
rover-parser = {path = "../rover-parser"}
rover-openapi = {path = "../rover-openapi"}
rover_types = {path = "../rover-types"}
serde_json = "1.0"
tokio = {version="1.48.0", features=["full"]}
tracing = "0.1"
smallvec = "1.15.1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.8"

[lib]
crate-type = ["cdylib", "lib"]
bench = false
