[package]
name = "rover_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10"
mlua = { version="0.11.5", features = ["anyhow", "vendored", "luajit52", "send", "serialize"] }
rover_server = {path = "../rover-server"}
rover-parser = {path = "../rover-parser"}
rover-openapi = {path = "../rover-openapi"}
rover_types = {path = "../rover-types"}
rover_db = {path = "../rover-db"}
serde_json = "1.0"
tracing = "0.1"
smallvec = "1.15.1"
curl = "0.4"
urlencoding = "2.1"
colored = "2.2"

[dev-dependencies]
tempfile = "3.8"

[lib]
crate-type = ["cdylib", "lib"]
bench = false
