[package]
name = "rover_db"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.11.5", features = ["anyhow", "vendored", "luajit52", "serialize"] }
libsql = "0.6"
tokio = { version = "1", features = ["rt", "sync"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tree-sitter = "0.26.3"
tree-sitter-lua = "0.2.0"
rover-parser = { path = "../rover-parser" }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"

[lib]
bench = false
