[package]
name = "rover_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10"
mlua = { version = "0.11.5", features = ["anyhow", "vendored", "luajit52", "serialize"] }
serde_json = "1.0"
tracing = "0.1"
smallvec = "1.15.1"
colored = "2.2"

# Optional runtime modules
rover_server = { path = "../rover-server", optional = true }
rover_ui = { path = "../rover-ui", optional = true }
rover_db = { path = "../rover-db", optional = true }
rover_types = { path = "../rover-types", optional = true }

[features]
default = ["http", "db"]
server = ["rover_server", "rover_types"]
ui = ["rover_ui", "rover_types"]
db = ["rover_db", "rover_types"]
http = []
full = ["server", "ui", "db", "http"]

[dev-dependencies]

[[bin]]
name = "rover-runtime"
path = "src/main.rs"
