[package]
name = "rover_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ahash = "0.8"
memchr = "2"
mlua = { version="0.11.5", features = ["anyhow", "vendored", "luajit52", "serialize"] }
rover_types = { path = "../rover-types" }
serde_json = "1.0"
serde = "1.0"
itoa = "1.0"
ryu = "1.0"
form_urlencoded = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2.1"
smallvec = "1.15.1"
matchit = "0.8"
rover-openapi = {path = "../rover-openapi"}
mio = { version = "1.0", features = ["os-poll", "net"] }
httparse = "1.10"
slab = "0.4"
bytes = "1.10"
lru = "0.12"


[lib]
crate-type = ["cdylib", "lib"]
bench = false
