[package]
name = "rover_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ahash = "0.8"
memchr = "2"
mlua = { version="0.11.5", features = ["anyhow", "vendored", "luajit52", "serialize"] }
rover_types = { path = "../rover-types" }
rover_ui = { path = "../rover-ui" }
serde_json = "1.0"
serde = "1.0"
itoa = "1.0"
ryu = "1.0"
form_urlencoded = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2.1"
smallvec = "1.15.1"
matchit = "0.8"
rover-openapi = {path = "../rover-openapi"}
mio = { version = "1.0", features = ["os-poll", "net", "os-ext"] }
httparse = "1.10"
slab = "0.4"
bytes = "1.10"
lru = "0.12"
sha1 = "0.10"
base64 = "0.22"
signal-hook = { version = "0.3", features = ["iterator"] }
crossbeam-channel = "0.5"
rand = "0.8"
flate2 = "1.1"
libsql = "0.6"
thiserror = "2.0"
tokio = { version = "1", features = ["rt"] }
bincode = "1.3"
rustls-pemfile = "2.0"
rustls = "0.23"
hpack = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
rcgen = "0.13"

[lib]
crate-type = ["cdylib", "lib"]
bench = false
