[package]
name = "rover_types"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version="0.11.5", features = ["anyhow", "vendored", "luajit", "serialize"] }
anyhow = "1.0.100"
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
