[package]
name = "rover_types"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde_json = "1.0"
tracing = "0.1"

[target.'cfg(any(target_arch = "wasm32", target_os = "ios", target_os = "android"))'.dependencies]
mlua = { version = "0.11.5", default-features = false, features = ["anyhow", "vendored", "lua54", "serialize"] }

[target.'cfg(not(any(target_arch = "wasm32", target_os = "ios", target_os = "android")))'.dependencies]
mlua = { version="0.11.5", default-features = false, features = ["anyhow", "vendored", "luajit", "serialize"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
