[package]
name = "rover_ui"
version = "0.1.0"
edition = "2024"

[features]
default = ["luajit52"]
luajit52 = ["mlua/luajit52"]
lua54 = ["mlua/lua54"]

[dependencies]
mlua = { version = "0.11.5", default-features = false, features = ["anyhow", "vendored"] }
smallvec = "1.15"
thiserror = "1.0"
parking_lot = "0.12"
smartstring = "1.0"

[dev-dependencies]
