[package]
name = "rover_ui"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_arch = "wasm32")'.dependencies]
mlua = { version = "0.11.5", default-features = false, features = ["anyhow", "lua54", "vendored"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mlua = { version = "0.11.5", default-features = false, features = ["anyhow", "luajit52", "vendored"] }

[dependencies]
smallvec = "1.15"
thiserror = "1.0"
parking_lot = "0.12"
smartstring = "1.0"
tracing = "0.1"
rover_types = { path = "../rover-types" }

[dev-dependencies]
