[package]
name = "rover-web-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
mlua = { version = "0.11.5", default-features = false, features = ["anyhow", "lua54", "vendored"] }
rover_ui = { path = "../rover-ui" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mlua = { version = "0.11.5", default-features = false, features = ["anyhow", "luajit52", "vendored"] }
rover_ui = { path = "../rover-ui" }
