[package]
name = "rover_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
mlua = { version="0.11.5", features = ["anyhow", "vendored", "lua54", "send", "serialize", "async"] }
rover_server = {path = "../rover_server"}
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["fs", "io-util"] }

[dev-dependencies]
tempfile = "3.8"

[lib]
crate-type = ["cdylib", "lib"]
bench = false
