[package]
name = "rover_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
mlua = { version="0.11.5", features = ["anyhow", "vendored", "lua54", "send", "serialize"] }
serde_json = "1.0"
form_urlencoded = "1.2"
tokio = {version="1.48.0", features=["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2.1"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }


[lib]
crate-type = ["cdylib", "lib"]
bench = false
