[package]
name = "rover_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
mlua = { version="0.11.5", features = ["anyhow", "vendored", "lua54", "send", "serialize", "async"] }
serde_json = "1.0"
itoa = "1.0"
ryu = "1.0"
form_urlencoded = "1.2"
tokio = {version="1.48.0", features=["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2.1"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
smallvec = "1.15.1"
matchit = "0.8"


[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
bytes = "1.5"

[[bench]]
name = "json_serialization"
harness = false

[[bench]]
name = "request_handling"
harness = false
