[package]
name = "rover-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rover"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
rover-runtime = { path = "../rover-runtime" }
rover-ios-runner = { path = "../../platform/ios-runner" }
