[package]
name = "rover-render"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
skia-safe = { version = "0.81", default-features = false, features = ["textlayout", "gl", "binary-cache"] }
rover-lua = { path = "../rover-lua" }
