[package]
name = "gears"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default=[]
android=[]
ios=[]

[dependencies]
include_dir = "0.7.4"
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
jni = { version = "0.21.1" }
objc2 = { version = "0.5.2" }
anyhow = "1.0.86"

[lib]
crate-type = ["staticlib", "cdylib"]


[build-dependencies]
cbindgen = "0.20"
