[package]
name = "gears"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
android=[]
ios=["objc2"]

[dependencies]
include_dir = "0.7.4"
mlua = { version = "0.9.9", features = ["vendored", "luau"] }
jni = { version = "0.21.1" }
objc2 = { version = "0.5.2", optional = true }
anyhow = "1.0.86"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
futures-util = "0.3"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[lib]
crate-type = ["staticlib", "cdylib"]


[build-dependencies]
cbindgen = "0.20"
