[package]
name = "rover"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
toml = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
notify = "5.0"
futures = "0.3"
