[package]
name = "gears"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
android=["jni"]

[dependencies]
include_dir = "0.7.4"
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
jni = { version = "0.21.1" , optional = true}
anyhow = "1.0.86"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
regex = "1.7.0"
once_cell = "1.20.2"
uuid = { version = "1.10.0", features= [ "v4","fast-rng","macro-diagnostics"] }


